--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "vite": "^5.1.0"
   },
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "csv-parse": "^5.5.3"
+  }
 }
